добавление фильтра в секьюрити